server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timestamp-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: timestamp-server
  template:
    metadata:
      labels:
        app: timestamp-server
    spec:
      containers:
        - name: timestamp-server
          image: anurag199/nodejs-apps:timestamp-0.0.2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
            initialDelaySeconds: 40
            failureThreshold: 2
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
            initialDelaySeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: timestamp-service
spec:
  selector:
    app: timestamp-server
  ports:
    - port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: timestamp-service
                port:
                  number: 80
      host: timestamp.test
